# node-replicated-kernel

./: .bors.toml  .gitignore  .gitlab-ci.yml  .gitmodules  .rustfmt.toml  .travis.yml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  Tupfile.lua  Tuprules.lua  bors.toml  libcore_patch.diff  positioning  run.sh  rust-toolchain  rust-toolchain.toml  setup.sh  setup_mac_binutils.sh
bootloader/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  OVMF_CODE.fd  README.md  aarch64-uefi.json  build.py
bootloader/src/: kernel.rs  main.rs  memory.rs  modules.rs  pci.rs  setup.rs  shared.rs  switch.S  vspace.rs
bootloader/src/arch/aarch64/: __chkstk.S  cpu.rs  mod.rs  switch.S  vspace.rs
bootloader/src/arch/x86_64/: cpu.rs  mod.rs  switch.S  vspace.rs
bootloader/src/boot/: memory.rs  mod.rs
bootloader/src/proto/: debug.rs  mod.rs
bootloader/src/proto/console/: gop.rs  mod.rs  pointer.rs  serial.rs  stdout.rs
kernel/: .gdbinit  Cargo.toml  LICENSE-MIT  NOTICE  Tupfile.lua  Xargo.toml  allocator.rs  build.rs  cmdline.in  commitable.sh  main.rs  mm.rs  mutex.rs  prelude.rs  qemu_affinity.py  run.py  run.sh  scheduler.rs  unwind.rs
kernel/.cargo/: config
kernel/arch/x86_64/: apic.rs  debug.rs  exec.S  gdt.rs  irq.rs  isr.S  memory.rs  mod.rs  process.rs  start.S  syscall.rs  target.json
kernel/arch/x86_64/threads/: context.S  context.rs  mod.rs  stack.rs
kernel/src/: cmdline.rs  cnrfs.rs  controller_main.rs  environment.rs  error.rs  fallible_string.rs  graphviz.rs  integration_main.rs  integration_tests.rs  kcb.rs  lib.rs  main.rs  mlnr.rs  mm.rs  mpmc.rs  mutex.rs  nr.rs  nrproc.rs  panic.rs  pci.rs  prelude.rs  process.rs  scheduler.rs  stack.rs  syscalls.rs  time.rs  unwind.rs
kernel/src/arch/aarch64/: aarch64-nrk.json  acpi.rs  coreboot.rs  debug.rs  exceptions.S  exceptions.rs  irq.rs  kcb.rs  memory.rs  mod.rs  process.rs  serial.rs  signals.rs  smc.rs  syscall.rs  timer.rs  tlb.rs  tls.rs
kernel/src/arch/unix/: coreboot.rs  debug.rs  irq.rs  kcb.rs  memory.rs  mod.rs  network.rs  process.rs  rackscale.rs  signals.rs  syscalls.rs  time.rs  timer.rs  tlb.rs  vspace.rs
kernel/src/arch/x86_64/: acpi.rs  acpi_printf.c  acpi_printf.h  apic.rs  bespin.json  coreboot.rs  debug.rs  exec.S  exec.rs  gdb.rs  gdt.rs  irq.rs  isr.S  isr.rs  kcb.rs  link.ld  memory.rs  mod.rs  network.rs  process.rs  remote_syscall.rs  serial.rs  signals.rs  sse.rs  start.S  start.rs  start_ap.S  syscall.rs  timer.rs  tlb.rs  tls.rs  vspace.rs  vspace_debug.rs  x86_64-bespin.json  x86_64-nrk.json
kernel/src/fs/: cnrfs.rs  fd.rs  file.rs  mnode.rs  mod.rs  rwlock.rs  test.rs
kernel/src/linuxrt/: mod.rs
kernel/src/memory/: backends.rs  buddy.rs  bump.rs  detmem.rs  emem.rs  frame.rs  global.rs  mcache.rs  mod.rs  ncache.rs  per_core.rs  shmem_affinity.rs  shmemalloc.rs  tcache.rs  tcache_sp.rs  utils.rs  vspace.rs  vspace_model.rs
kernel/src/mlnrfs/: fd.rs  file.rs  mnode.rs  mod.rs  rwlock.rs  test.rs
kernel/src/rumprt/: dev.rs  fs.rs  io.rs  locking.rs  mod.rs  threads.rs
kernel/src/scheduler/: mod.rs  process.rs  spawn.rs
kernel/src/time/: mod.rs
kernel/src/transport/: ethernet.rs  mod.rs  shmem.rs
kernel/tests/: dhcpd.conf  integration-test.rs  s00_core_tests.rs  s01_kernel_low_tests.rs  s02_kernel_high_tests.rs  s03_kernel_high_tests.rs  s04_user_runtime_tests.rs  s05_user_app_tests.rs  s06_benchmarks.rs  s06_rackscale_tests.rs  s07_rackscale_tests.rs  s08_rackscale_benchmarks.rs  s10_benchmarks.rs  s11_rackscale_benchmarks.rs
kernel/tests/common/: builder.rs  helpers.rs  mod.rs  redis.rs  runner_args.rs
kernel/testutils/: Cargo.toml  build.rs
kernel/testutils/src/: builder.rs  configs.rs  helpers.rs  lib.rs  memcached.rs  rackscale_runner.rs  redis.rs  runner_args.rs
lib/apic/: Cargo.toml  README.md
lib/apic/src/: ioapic.rs  lib.rs  x2apic.rs  xapic.rs
lib/bootloader_shared/: Cargo.toml  README.md
lib/bootloader_shared/src/: lib.rs
lib/kpi/: Cargo.toml  README.md
lib/kpi/src/: io.rs  lib.rs  pci.rs  process.rs  syscalls.rs  system.rs  upcall.rs  writer.rs  x86_64.rs
lib/kpi/src/syscalls/: io.rs  macros.rs  memory.rs  mod.rs  process.rs  system.rs  vspace.rs
lib/lineup/: .gitignore  Cargo.toml  LICENSE  README.md
lib/lineup/src/: condvar.rs  lib.rs  mutex.rs  rwlock.rs  scheduler.rs  semaphore.rs  smp.rs  stack.rs  threads.rs  tls.rs  upcalls.rs
lib/lineup/src/tls/: bespin.rs  mod.rs  unix.rs  x86_64.rs
lib/lineup/src/tls2/: bespin.rs  mod.rs  nrk_aarch64.rs  nrk_x86_64.rs  unix.rs
lib/node-replication/nr/: Cargo.toml
lib/rpc/: Cargo.toml
lib/rpc/src/: api.rs  client.rs  client_shmem.rs  cluster_api.rs  fio_rpc.rs  lib.rs  rpc.rs  rpc_api.rs  rpc_client.rs  rpc_server.rs  server.rs  server_shmem.rs  tcp_client.rs  tcp_server.rs  tcp_transport.rs
lib/rpc/src/transport/: api.rs  mod.rs  mpsc.rs  shmem.rs  smoltcp.rs
lib/rpc/tests/: integration-test.rs  integration_test.rs
lib/rpc/tests/common/: mod.rs  mpsc_client.rs  mpsc_server.rs
lib/vibrio/: Cargo.toml  README.md  build.rs
lib/vibrio/src/: io.rs  lib.rs  mem.rs  syscalls.rs  upcalls.rs  vconsole.rs  writer.rs
lib/vibrio/src/arch/: aarch64.rs  mod.rs  switch.S  x86_64.rs
lib/vibrio/src/lklrt/: dev.rs  locking.rs  mod.rs  threads.rs
lib/vibrio/src/rumprt/: dev.rs  errno.rs  fs.rs  locking.rs  mod.rs  sp.rs  threads.rs
lib/vmxnet3/: Cargo.toml
lib/vmxnet3/src/: lib.rs  pci.rs  reg.rs  smoltcp.rs  var.rs  vmx.rs
lib/vmxnet3/src/pvrdma/: commands.rs  cq.rs  dev_api.rs  dmabuffer.rs  mod.rs  pagedir.rs  pci.rs  pvrdma.rs  verbs.rs
usr/init/: Cargo.toml  README.md  Tupfile  Tupfile.lua  build.rs  crt0.S  init.rs  main.rs  prelude.rs  unwind.rs
usr/init/src/: f64.rs  fs.rs  fsbench.rs  fsproptest.rs  histogram.rs  init.rs  syscalls.rs  tests.rs  vmops.rs
usr/init/src/dynrep/: allocator.rs  mod.rs
usr/init/src/fxmark/: drbh.rs  drbl.rs  dwol.rs  dwom.rs  mix.rs  mod.rs  mwrl.rs  mwrm.rs
usr/init/src/memhash/: mod.rs
usr/rkapps/: Cargo.toml  README.md  Xargo.toml  build.rs
usr/rkapps/src/: main.rs
(+241 files in other folders)
