[workspace]
resolver = "2"

members = [
    "bootloader",
    "kernel",
    "lib/apic",
    "lib/bootloader_shared",
    "lib/kpi",
    "lib/lineup",
    "lib/node-replication/cnr",
    "lib/node-replication/nr",
    "lib/rpc",
    "lib/vibrio",
    "lib/vmxnet3",
    "lib/rpc",
    "usr/init",
    "usr/rkapps",
    #"lib/rust-driverkit",
    #"lib/rust-x86",
    #"lib/rawtime",
    #"lib/libfringe",
]

# disable stack unwinding on panic for now
[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true

[patch.crates-io]
#driverkit = { path = "lib/rust-driverkit" }
#x86 = { path = "lib/rust-x86" }
#rawtime = { path = "lib/rawtime" }
