[package]
name = "bootloader"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"

[dependencies]
## Internal dependencies
bootloader_shared = { path = "../lib/bootloader_shared" }
elfloader = { path = "../lib/elfloader" }
x86 = { path = "../lib/x86" }

## External dependencies
log = { version = "0.4", default-features = false }
arrayvec = { version = "0.5.1", default-features = false, features = ["array-sizes-129-255"] }
uefi = { version = "0.7.0", features = ["exts"]}
uefi-services = "0.4.0"
