[package]
name = "bootloader"
version = "0.0.1"
authors = [
    "Gerd Zellweger <mail@gerdzellweger.com>",
    "Reto Achermann <achreto@cs.ubc.ca"
]
edition = "2018"
license = "MIT OR Apache-2.0"
resolver = "2"

[features]
default = []

[dependencies]
## Internal dependencies
bootloader_shared = { path = "../lib/bootloader_shared" }

## External dependencies
elfloader = "0.14"
log = { version = "0.4", default-features = false }
arrayvec = { version = "0.7.0", default-features = false }
uefi = { version = "0.15", features = ["exts"] }
uefi-services = "0.12"


# Arch Specific Dependencies for x86_64 Targets
# -------------------------------------------------------------------------------------------------
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = { version = "0.52", features = ["unstable"] }


# Arch Specific Dependencies for aarch64 Targets
# -------------------------------------------------------------------------------------------------
[target.'cfg(target_arch = "aarch64")'.dependencies]
armv8 = { git = "https://github.com/achreto/rust-armv8" }