[package]
name = "bootloader"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
resolver = "2"

[features]
default = []

[dependencies]
## Internal dependencies
bootloader_shared = { path = "../lib/bootloader_shared" }

## External dependencies
x86 = { version = "0.52", features = ["unstable"] }
elfloader = "0.14"
log = { version = "0.4", default-features = false }
arrayvec = { version = "0.7.0", default-features = false }
uefi = { version = "0.15", features = ["exts"] }
uefi-services = "0.12"