[package]
name = "apic"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
description = "ACPI drivers."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["os", "acpi", "irq", "driver", "x86"]
edition = "2018"

[dependencies]
driverkit = "0.24"
x86 = { version = "0.52", features = ["unstable"] }
log = "0.4"
bitflags = "1.0"
bit_field = "0.10.0"

[target.'cfg(unix)'.dev-dependencies]
env_logger = "0.5"
