[package]
name = "bootloader_shared"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
x86 = { path = "../x86" }

arrayvec = { version = "0.5.1", default-features = false, features = ["array-sizes-129-255"] }
uefi = "0.8.0"
