[package]
name = "bootloader_shared"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
arrayvec = { version = "0.7.0", default-features = false }
uefi = "0.15"

# Arch Specific Dependencies for x86_64 Targets
# -------------------------------------------------------------------------------------------------
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = { version = "0.52", features = ["unstable"] }


# Arch Specific Dependencies for aarch64 Targets
# -------------------------------------------------------------------------------------------------
[target.'cfg(target_arch = "aarch64")'.dependencies]
armv8 = { git = "https://github.com/achreto/rust-armv8" }
