[package]
name = "kpi"
version = "0.1.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
x86 = { version = "0.52", features = ["unstable"] }
abomonation = { git="https://github.com/hunhoffe/abomonation.git", branch="no-std", default-features = false }
bitflags = "1.2"
core2 = { version = "0.3", default-features = false, features = [ "alloc" ] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_cbor = { version = "0.11", default-features = false, features = ["alloc"] }
log = "0.4"
static_assertions = "1.1.0"
memoffset = { version = "0.6", features = ["unstable_const"] }
bit_field = "0.10.1"

[target.'cfg(target_family = "unix")'.dev-dependencies]
env_logger = "*"
