[package]
name = "lineup"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
kpi = { path = "../kpi" }
crossbeam-utils = { version = "0.8", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
either = { version = "1.5", default-features = false }
fringe = { git = "https://github.com/gz/libfringe.git", default-features = false, features = ["alloc"], branch = "llvm_asm" }
hashbrown = { version = "0.11.2", features = [ "nightly" ] }
rawtime = "0.0.4"
backtracer_core = "0.0.4"
x86 = "0.40"
log = "0.4.6"
spin = "0.9"
arr_macro = "0.1"

[features]
default = []
latency = []

[target.'cfg(target_family = "unix")'.dev-dependencies]
env_logger = "*"
