[package]
name = "lineup"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
kpi = { path = "../kpi" }
crossbeam-utils = { version = "0.8", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
either = { version = "1.5", default-features = false }
fringe = { git = "https://github.com/achreto/libfringe.git", default-features = false, features = ["alloc"], branch = "new-asm-syntax" }
hashbrown = { version = "0.12.3", features = [ "nightly" ] }
rawtime = { git = "https://github.com/achreto/rust-rawtime" }
backtracer_core = { git = "https://github.com/achreto/backtracer" }
log = "0.4.6"
spin = "0.9"
arr_macro = "0.1"


# Arch Specific Dependencies for x86_64 Targets
# -------------------------------------------------------------------------------------------------
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = { version = "0.52", features = ["unstable"] }


# Arch Specific Dependencies for aarch64 Targets
# -------------------------------------------------------------------------------------------------
[target.'cfg(target_arch = "aarch64")'.dependencies]
armv8 = { path = "../armv8/" }


[features]
default = []
latency = []

[target.'cfg(target_family = "unix")'.dev-dependencies]
env_logger = "*"
