[package]
name = "rpc"
version = "0.1.0"
authors = ["Erika Hunhoff <hunhoff.erika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abomonation = { git="https://github.com/hunhoffe/abomonation.git", branch="no-std", default-features = false }
hashbrown = { version = "0.11", features = [ "nightly" ] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4"
smoltcp = { version = "0.8.0", default-features = false, features = [ "alloc", "log", "proto-ipv4", "socket-tcp", "medium-ethernet" ], optional = true }
rawtime = "0.0.6"
vmxnet3 = { path = "../vmxnet3", optional = true }

[features]
"default" = ["smoltcp_transport"]

"smoltcp_transport" = ["smoltcp", "vmxnet3"]
"mpsc_transport" = ["std"]

"std" = []

"test" = ["mpsc_transport"]
