[package]
name = "rpc"
version = "0.1.0"
authors = ["Erika Hunhoff <hunhoff.erika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abomonation = { git="https://github.com/hunhoffe/abomonation.git", branch="no-std", default-features = false }
arrayvec = { version = "0.7.0", default-features = false }
core2 = { version = "0.3", default-features = false, features = [ "alloc" ] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4"
rawtime = "0.0.10"
spin = "0.9.1"
smoltcp = { git = "https://github.com/hunhoffe/smoltcp.git", branch = "v0.8.0-peek-slice", default-features = false, features = [ "alloc", "log", "proto-ipv4", "socket-tcp", "medium-ethernet" ] }
vmxnet3 = { path = "../vmxnet3" }

[features]
std = []

[dev-dependencies]
env_logger = "0.9"
rpc = { path = ".", features = ["std"] }
