[package]
name = "vibrio"
version = "0.1.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
description = "A small user-space runtime that interacts with the bespin kernel."
build = "build.rs"

[lib]
name = "vibrio"
crate-type = ["staticlib", "rlib"]

[dependencies]
bitflags = "1.2"
log = "0.4"
x86 = { path = "../x86" }
kpi = { path = "../kpi" }
slabmalloc = { path = "../slabmalloc" }
rawtime = { path = "../rawtime" }
lineup = { path = "../lineup" }
rumpkernel = { path = "../rumpkernel", optional = true }
spin = "0.5.2"
cstr_core = { version = "0.2.3", default-features = false , features = ["alloc"] }
hashbrown = { version = "0.6.0", optional = true }
lazy_static = { version = "1.3", features = ["spin_no_std"] }
serde_cbor = { version = "0.11", default-features = false, features = ["alloc"] }
crossbeam-utils = {version = "0.8", default-features = false}
arrayvec = { version = "0.7.0", default-features = false }

[features]
# Include rumpkernel runtime
rumprt = ["rumpkernel", "hashbrown"]
# Use virtio for default networking driver
virtio = []
