[package]
name = "vibrio"
version = "0.1.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
description = "A small user-space runtime that interacts with the nrk kernel."
build = "build.rs"
license = "MIT OR Apache-2.0"

[lib]
name = "vibrio"
crate-type = ["staticlib", "rlib"]

[dependencies]
kpi = { path = "../kpi" }
lineup = { path = "../lineup" }
bitflags = "1.2"
log = "0.4"
x86 = { version = "0.52", features = ["unstable"] }
slabmalloc = "0.10"
rawtime = "0.0.10"
spin = "0.9.2"
cstr_core = { version = "0.2.3", default-features = false , features = ["alloc"] }
hashbrown = { version = "0.11.2", optional = true }
lazy_static = { version = "1.3", features = ["spin_no_std"] }
serde_cbor = { version = "0.11", default-features = false, features = ["alloc"] }
crossbeam-utils = {version = "0.8", default-features = false}
arrayvec = { version = "0.7.0", default-features = false }

[target.'cfg(target_os = "nrk")'.dependencies]
rumpkernel = { version = "0.0.5", optional = true }


[features]
default = []
# Include rumpkernel runtime
rumprt = ["rumpkernel", "hashbrown"]
# Use virtio for default networking driver
virtio = []
