[package]
name = "vmxnet3"
version = "0.1.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
description = "vmxnet3 - a virtual NIC device driver"
license = "BSD-2-Clause"

[dependencies]
log = "0.4"
static_assertions = "1.1.0"
x86 = "0.40"
arrayvec = { version = "0.7.0", default-features = false }
custom_error = { version = "1.9", default-features = false, features = ["unstable"] }
driverkit = "0.9"
smoltcp = { version = "0.7.1", default-features = false, features = [ "alloc", "log", "proto-ipv4", "proto-igmp", "proto-dhcpv4", "socket-raw", "socket-icmp", "socket-udp", "socket-tcp" ] }

[target.'cfg(target_family = "unix")'.dev-dependencies]
env_logger = "0.9"

[features]
# Enable receive-side-scaling (RSS)
rss = []
