[package]
name = "init"
version = "0.1.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
build = "build.rs"
license = "MIT OR Apache-2.0"

[[bin]]
name = "init"
path = "src/init.rs"

[dependencies]
lineup = { path = "../../lib/lineup" }
kpi = { path = "../../lib/kpi" }
vibrio = { path = "../../lib/vibrio" }
rawtime = "0.0.4"
x86 = "0.40"
log = "0.4"
libm = "0.2.1"
lazy_static =  { version = "1.4", default_features = false }
cstr_core = { version = "0.2.3", default-features = false }
spin = { version = "0.5.2", default_features = false }

[features]
default = []
rumprt = ["vibrio/rumprt"]
# Use virtio instead of e1000
virtio = []

# Tests we run with CI make sure that the base features of
# the kernel are working:
test-print = []
test-map = []
test-alloc = []
test-upcall = []
test-scheduler = []
test-scheduler-smp = []
test-rump-tmpfs = [ "rumprt" ]
test-rump-net = [ "rumprt" ]
test-fs = []

# Simple micro-benchmarks
bench-vmops = []
bench-vmops-unmaplat = []
fs-write = []
fxmark = []

# smoke: A way to tell the micro-benchmarks
# to only run for a short period, don't consume many
# resources, just enough to make sure they work
# but won't produce valid results
smoke = []
# Do latency measurements in benchmarks
latency = []
