[package]
name = "rkapps"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
build = "build.rs"
links = "rumpkernel"

[dependencies]
rumpkernel = "0.0.5"
vibrio = { path = "../../lib/vibrio", features = ["rumprt"] }

[build-dependencies]
num_cpus = "1.9"

[features]
redis = []
memcached = []
nginx = []
leveldb-bench = []
memcached-bench = []
monetdb = []

