[package]
name = "node-replication"
version = "0.1.0"
authors = ["Chinmay Kulkarni <chinmayk@cs.utah.edu>", "Gerd Zellweger <mail@gerdzellweger.com>", "Ankit Bhardwaj <bhrdwj.ankit@gmail.com>", "Irina Calciu <icalciu@vmware.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "An operation-log based approach for data replication."
keywords = ["numa", "log", "x86", "black-box", "replication"]
categories = ["algorithms", "concurrency", "data-structures", "no-std", "os"]
autobenches = false

[dependencies]
crossbeam-utils = { version = "0.8", default-features = false }
arr_macro = "0.1.2"
log = "0.4"
static_assertions = "1.1.0"

# Add debug symbols on the release build so that we can debug performance issues
[profile.release]
debug = true

[dev-dependencies]
chashmap = "2.2"
rand = { version = "0.7", features = ["small_rng"] }
